# obs-planning-poker

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
public/card/: card.css  card.js  index.html
public/panel/: index.html  manifest.json  panel.css  panel.js
src/: constants.ts  server.ts  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  server.rs  state.rs  types.rs
src/panel/: index.html  panel.css  panel.js
